adding Certified Kubernetes Application Developer to certifications

--- a/_includes/resume/certifications.html
+++ b/_includes/resume/certifications.html
@@ -9,15 +9,29 @@
         <ul class="two-column-list">
             <li>
                 <div class="flexdiv">
+                    <span class="left">Active Top Secret Security Clearance</span>
+                    <span class="right">July, 2024</span>
+                </div>
+            </li>
+            <li>
+                <div class="flexdiv">
                     <span class="left">Currently pursuing AWS Certification</span>
                     <span class="right">In Progress</span>
                 </div>
             </li>
             <li>
                 <div class="flexdiv">
-                    <span class="left">Active Top Secret Security Clearance</span>
-                    <span class="right">July, 2024</span>
-                </div>
+                    <span class="left">
+                        <a target="_blank"
+                            href="https://ti-user-certificates.s3.amazonaws.com/e0df7fbf-a057-42af-8a1f-590912be5460/e1eecb91-40e3-47c0-9f95-a9471a8d6069-thomas-demay-cd3d7019-014e-4409-a4c5-9f6a3b3aae58-certificate.pdf"
+                            class="link-with-indicator">
+                            Certified Kubernetes Application Developer
+                            <i class="fas fa-external-link-alt fa-xs"></i>
+                        </a><br>
+                        Cloud Native Computing Foundation
+                    </span>
+                    <span class="right">October, 2024</span>
+            </li>
             <li>
                 <div class="flexdiv">
                     <span class="left">
@@ -32,13 +46,13 @@
             </li>
             <li>
                 <div class="flexdiv">
-                    <span class="left">Microsoft Certified Solution Developer (MCSD)</span>
+                    <span class="left">Microsoft Certified Solution Developer (MCSD) - expired</span>
                     <span class="right">April, 1998</span>
                 </div>
             </li>
             <li>
                 <div class="flexdiv">
-                    <span class="left">Microsoft Certified Professional (MCP)</span>
+                    <span class="left">Microsoft Certified Professional (MCP) - expired</span>
                     <span class="right">March, 1998</span>
                 </div>
             </li>
