--- a/_includes/resume/certifications.html
+++ b/_includes/resume/certifications.html
@@ -22,13 +22,12 @@
             <li>
                 <div class="flexdiv">
                     <span class="left">
-                        <a target="_blank"
-                            href="https://ti-user-certificates.s3.amazonaws.com/e0df7fbf-a057-42af-8a1f-590912be5460/e1eecb91-40e3-47c0-9f95-a9471a8d6069-thomas-demay-cd3d7019-014e-4409-a4c5-9f6a3b3aae58-certificate.pdf"
+                        <a target="_blank" href="https://www.credly.com/badges/c4a46987-bf2f-46c1-908b-c96e8bd8dfc7"
                             class="link-with-indicator">
-                            Certified Kubernetes Application Developer
+                            CKAD: Certified Kubernetes Application Developer
                             <i class="fas fa-external-link-alt fa-xs"></i>
                         </a><br>
-                        Cloud Native Computing Foundation
+                        The Linux Foundation & Cloud Native Computing Foundation
                     </span>
                     <span class="right">October, 2024</span>
             </li>
