--- a/_includes/sitelayout/sitenavigation.html
+++ b/_includes/sitelayout/sitenavigation.html
@@ -14,8 +14,8 @@
         </span>
     </label>
     <ul class="navigation-menu-items">
-        <li><a href="index.html">About Me</a></li>
-        <li><a href="resume.html">Resume</a></li>
+        <li><a href="aboutme.html">About Me</a></li>
+        <li><a href="index.html">Resume</a></li>
         <li><a href="contactme.html">Contact Me</a></li>
         <li><a href="aboutthissite.html">About Site</a></li>
         {% if page.enable_print_to_pdf %}
