--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,12 @@
     <meta charset="utf-8">
     <title>{{ site.title }} - {{ page.title }}</title>
     <link rel="stylesheet" href="{{ "/assets/css/default-styles.css" | relative_url }}">
-    <link id="print-css" rel="stylesheet" href="{{ "/assets/css/print-styles.css" | relative_url }}" media="print">
-    <link id="screen-css" rel="stylesheet" href="{{ "/assets/css/screen-styles.css" | relative_url }}" media="screen">
+    {% if page.bullet_style_resume %}
+        <link id="print-css" rel="stylesheet" href="{{ "/assets/css/print-styles.css" | relative_url }}">
+    {% else %}
+        <link id="print-css" rel="stylesheet" href="{{ "/assets/css/print-styles.css" | relative_url }}" media="print">
+        <link id="screen-css" rel="stylesheet" href="{{ "/assets/css/screen-styles.css" | relative_url }}" media="screen">
+    {% endif %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon">
 </head>
