Adding Ansible and separating Education and Training

--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -89,11 +89,12 @@
         <li class="skill">
             <strong class="skill-type large intermediate">CI/CD and DevOps:</strong>
             <ul class="skill-items competency-level">
-                <li class="diamond">CruiseControl</li>
-                <li class="diamond">NANT</li>
+                <li class="diamond">Ansible</li>
+                <li class="diamond">AWS CI/CD Tools</li>
                 <li class="diamond">Jenkins</li>
                 <li class="diamond">Jira</li>
-                <li>AWS CI/CD Tools</li>
+                <li class="diamond">NANT</li>
+                <li>CruiseControl</li>
             </ul>
         </li>
         <li class="skill">
