Adding recent altamira projects

--- a/_includes/resume/employmenthistory/altamira.html
+++ b/_includes/resume/employmenthistory/altamira.html
@@ -28,5 +28,7 @@
         <li>Managed relationships with Defense Contractor engineering teams on Next-Gen Spacecraft projects, utilizing
             PlantUML for architecture and sequence diagrams.</li>
         <li>Collaborated on cloud-based solutions (AWS), integrating React, GoLang, and serverless architectures.</li>
+        <li>Developed framework for deploying applications to AWS Elastic Kubernetes Service (AWS EKS).</li>
+        <li>Ported Java SDK APIs to Python 3.13 and to C++23 using Boost v1.83, CMake v3.28 and gcc v14.2.</li>
     </ul>
 </details>
