Updates - Top Secret with SCI, and  C++ and k8s certification and improved cover letter

--- a/_includes/resume/certifications.html
+++ b/_includes/resume/certifications.html
@@ -9,14 +9,8 @@
         <ul class="two-column-list">
             <li>
                 <div class="flexdiv">
-                    <span class="left">Active Top Secret Security Clearance</span>
+                    <span class="left">Active Top Secret Security Clearance with SCI</span>
                     <span class="right">July, 2024</span>
-                </div>
-            </li>
-            <li>
-                <div class="flexdiv">
-                    <span class="left">Currently pursuing AWS Certification</span>
-                    <span class="right">In Progress</span>
                 </div>
             </li>
             <li>
