--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -2,24 +2,33 @@
     {% include_relative _includes/sitelayout/headercontent.html %}
     <div class="cover-letter-content">
         <p>Dear Hiring Manager,</p>
-        <p>I would like to introduce myself. My name is Tom DeMay. I am a Principal Software Engineer and Manager with
-            Altamira Technologies Corporation working primarily in the national security space, holding an active Top
-            Secret security clearance. I would like to tell
-            you a little bit about me and why I feel I would be a great addition to your company.</p>
-        <p>I have been a Software Engineer for over 30 years with a tremendously wide range of experiences;
-            as an individual contributor, technical lead, and management. Ultimately I am a hands-on engineer.
-            I am much more than just a coder. I am a problem solver. Bring whatever problem you have to me and
-            I will own it from inception to completion. I will build the necessary tools, systems, and teams and
-            lead them to accomplish any goal.</p>
-        <p>I have a passion for the software factory process. I always look for ways to be more efficient, write
-            maintainable code, improve team and organization communication, deliver consistent and reliable
-            estimates, and mentor junior developers. I refactor relentlessly.</p>
+
+        <p>My name is Tom DeMay. I am a Principal Software Engineer and Manager with Altamira Technologies Corporation,
+            working in the national security space in support of the Department of Defense (DoD) and the Intelligence
+            Community (IC). I hold a Top Secret security clearance with SCI. I would like to tell you a little bit about
+            me and why I feel I would be a great addition to your company.</p>
+
+        <p>I have over 30 years of experience as a self-taught Software Engineer. I have served as an individual
+            contributor, technical lead, and manager. Above all, I’m a hands-on engineer and problem solver. Bring me
+            any problem, and I will own it from inception to completion, building the tools, systems, and teams needed
+            to accomplish the goal.</p>
+
+        <p>I have a passion for the software factory process: increasing efficiency, writing maintainable code,
+            improving communication, delivering reliable estimates, and mentoring developers. I refactoring
+            relentlessly and enjoy cleaning up technical debt.</p>
+
+        <p>I am a Certified C++ Programmer and a Certified Kubernetes Application Developer (CKAD) experienced in
+            building cloud-native applications, leveraging technologies like Kubernetes to ensure scalability and
+            reliability.
+            These skills complement my hands-on experience and demonstrate my ability to adapt to evolving industry
+            standards.</p>
+
         <p>I aggressively acquire new skills and am constantly learning. Fresh out of high school in 1989, I studied and
-            passed the Series 6 and 63 licenses to sell securities within two months. In 2000, I earned my private
-            pilot's license in three months after my first flight lesson, completing the ground school on my own. Since
-            2009, I have been performing live, playing the piano, keyboards, guitar, harmonica, and banjo—all
-            self-taught.
-        </p>
+            passed the Series 6 and 63 licenses to sell securities to investors within two months. In 2000, I earned my
+            private pilot's license in three months after my first flight lesson, completing the ground school on my
+            own. Since 2009, I have been performing live, playing the piano, keyboards, guitar, harmonica, and banjo—all
+            self-taught.</p>
+
         <p>As a self-taught software engineer, by my late 20s I managed other software engineers, published with
             Advisor Publications, and spoke on software engineering principles at local user group meetings. At 30, I
             completed four years of school in one year to earn my Bachelor's in Computer Science, maintaining a 4.0 GPA.
@@ -27,27 +36,21 @@
             experiment to learn web application development. It became one of the leading sites in its industry,
             generating half a million in annual revenue until I sold it for a profit in 2011. The site continues to
             operate and claims to be the largest supplier of gaming equipment, as many of its competitors have come and
-            gone.
-        </p>
-        <p>I have a reputation for having high standards, writing well-designed code that is maintainable, and I
-            work well with others. I maintain a great relationship with all my previous managers and co-workers and
-            enjoy collaborating with other teammates I can learn from. I received numerous awards for bailing out a
-            number of failing projects. I mentor and develop the skills of junior and struggling engineers. I enjoy
-            refactoring code. In one case, I improved performance by 3,951%. In that particular case, code that
-            initially took 6 hours to run before it failed, consuming all the computer's resources and crashing,
-            was refactored to complete in 6 minutes using only 40MB of memory. </p>
-        <p>As you can see, I am an aggressive learner and have a passion for continued education. Rust, GoLang, C/C++,
-            C# .NET, Java, Python, Website development, SQL and NoSQL, various back end databases, and
-            cloud computing are just a few of the tech stacks I have taught myself. I am currently working on
-            web applications with Java, Spring Boot, and React.js and currently working towards my
-            AWS and Azure certifications.</p>
-        <p>As you can tell I am very proud of my history and accomplishments. I am excited to share with you my
-            many success stories and even some not-so-successful stories that became learning opportunities for
-            me. I honestly believe I can fit in well in any organization in a variety of different roles due to
-            my passion for software engineering and learning. I am open to any kind of development. Above
-            all, I like being creative, collaborating with others, and learning, which I believe would be a
-            tremendous asset to your organization.</p>
-        <p>Thank you for your time and your consideration. Sincerely,</p>
+            gone.</p>
+
+        <p>I have a reputation for high standards, writing well-designed maintainable code, and work well with others.
+            I received numerous awards for bailing out a number of failing projects leading performance improvements
+            ranging from roughly 3,900% to over 8,500%. In one case, a backend service that took 6 hours before failing
+            was refactored to complete in 6 minutes using only 40MB of memory. In another, I tuned databases to perform
+            99.5% of all queries in 1 millisecond that previously took up to 10 seconds. In a third case, I took over
+            leadership of a 3D interactive web application project using Cesium, JavaScript, and TypeScript. We had a
+            year to deliver performance improvements, but we completed them nine months early—just three months after
+            joining the team.</p>
+
+        <p>I am proud of my history and accomplishments. I believe I can fit into any organization in many roles due to
+            my passion for software engineering and learning. I value creativity, collaboration, and continuous
+            growth—qualities I believe would benefit your organization greatly.</p>
+        <p>Thank you for your time and consideration.</p>
         <br />
         Tom DeMay
         <hr class="page-break" />
