tweaks to coverletter

--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -6,7 +6,7 @@
         <p>My name is Tom DeMay. I am a Principal Software Engineer and Manager with Altamira Technologies Corporation,
             working in the national security space in support of the Department of Defense (DoD) and the Intelligence
             Community (IC). I hold a Top Secret security clearance with SCI. I would like to tell you a little bit about
-            me and why I feel I would be a great addition to your company.</p>
+            myself and why I feel I would be a great addition to your company.</p>
 
         <p>I have over 30 years of experience as a self-taught Software Engineer. I have served as an individual
             contributor, technical lead, and manager. Above all, I’m a hands-on engineer and problem solver. Bring me
@@ -14,14 +14,13 @@
             to accomplish the goal.</p>
 
         <p>I have a passion for the software factory process: increasing efficiency, writing maintainable code,
-            improving communication, delivering reliable estimates, and mentoring developers. I refactoring
+            improving communication, delivering reliable estimates, and mentoring developers. I refactor
             relentlessly and enjoy cleaning up technical debt.</p>
 
-        <p>I am a Certified C++ Programmer and a Certified Kubernetes Application Developer (CKAD) experienced in
-            building cloud-native applications, leveraging technologies like Kubernetes to ensure scalability and
-            reliability.
-            These skills complement my hands-on experience and demonstrate my ability to adapt to evolving industry
-            standards.</p>
+        <p>I am a Certified C++ Programmer and a Certified Kubernetes Application Developer (CKAD), with experience in
+            cloud computing. My expertise includes architecting, building and deploying cloud-native
+            applications, leveraging technologies like Kubernetes to ensure scalability and reliability. These skills
+            complement my hands-on experience and demonstrate my ability to adapt to evolving industry standards.</p>
 
         <p>I aggressively acquire new skills and am constantly learning. Fresh out of high school in 1989, I studied and
             passed the Series 6 and 63 licenses to sell securities to investors within two months. In 2000, I earned my
@@ -38,18 +37,20 @@
             operate and claims to be the largest supplier of gaming equipment, as many of its competitors have come and
             gone.</p>
 
-        <p>I have a reputation for high standards, writing well-designed maintainable code, and work well with others.
-            I received numerous awards for bailing out a number of failing projects leading performance improvements
-            ranging from roughly 3,900% to over 8,500%. In one case, a backend service that took 6 hours before failing
-            was refactored to complete in 6 minutes using only 40MB of memory. In another, I tuned databases to perform
-            99.5% of all queries in 1 millisecond that previously took up to 10 seconds. In a third case, I took over
-            leadership of a 3D interactive web application project using Cesium, JavaScript, and TypeScript. We had a
-            year to deliver performance improvements, but we completed them nine months early—just three months after
-            joining the team.</p>
+        <p>I have a reputation for high standards, writing well-designed maintainable code, and working well with
+            others.
+            I received numerous awards for bailing out a number of failing projects, leading performance improvements
+            ranging from roughly 3,900% to over 8,500%. In one case, a backend data collection service that ran for 6
+            hours before exhausting all system resources was refactored to complete in 6 minutes using only 40MB of
+            memory. In another, I tuned databases to perform 99.5% of all queries in 1 millisecond that previously took
+            up to 10 seconds. In a third case, I took over leadership of a 3D interactive web application project using
+            Cesium, JavaScript, and TypeScript. We had a year to deliver performance improvements, but we completed them
+            nine months early—just three months after I joined the team.</p>
 
         <p>I am proud of my history and accomplishments. I believe I can fit into any organization in many roles due to
             my passion for software engineering and learning. I value creativity, collaboration, and continuous
             growth—qualities I believe would benefit your organization greatly.</p>
+
         <p>Thank you for your time and consideration.</p>
         <br />
         Tom DeMay
