--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -18,9 +18,9 @@
             relentlessly and enjoy cleaning up technical debt.</p>
 
         <p>I am a Certified C++ Programmer and a Certified Kubernetes Application Developer (CKAD), with experience in
-            cloud computing. My expertise includes architecting, building and deploying cloud-native
-            applications, leveraging technologies like Kubernetes to ensure scalability and reliability. These skills
-            complement my hands-on experience and demonstrate my ability to adapt to evolving industry standards.</p>
+            cloud computing. My expertise includes architecting, building, and deploying cloud-native applications,
+            leveraging technologies like Kubernetes to ensure scalability and reliability. These skills complement my
+            hands-on experience and demonstrate my ability to adapt to evolving industry standards.</p>
 
         <p>I aggressively acquire new skills and am constantly learning. Fresh out of high school in 1989, I studied and
             passed the Series 6 and 63 licenses to sell securities to investors within two months. In 2000, I earned my
@@ -37,15 +37,14 @@
             operate and claims to be the largest supplier of gaming equipment, as many of its competitors have come and
             gone.</p>
 
-        <p>I have a reputation for high standards, writing well-designed maintainable code, and working well with
-            others.
-            I received numerous awards for bailing out a number of failing projects, leading performance improvements
-            ranging from roughly 3,900% to over 8,500%. In one case, a backend data collection service that ran for 6
-            hours before exhausting all system resources was refactored to complete in 6 minutes using only 40MB of
-            memory. In another, I tuned databases to perform 99.5% of all queries in 1 millisecond that previously took
-            up to 10 seconds. In a third case, I took over leadership of a 3D interactive web application project using
-            Cesium, JavaScript, and TypeScript. We had a year to deliver performance improvements, but we completed them
-            nine months early—just three months after I joined the team.</p>
+        <p>I have a reputation for high standards, writing well-designed maintainable code, and work well with
+            others. I received numerous awards for bailing out a number of failing projects, leading performance
+            improvements ranging from roughly 3,900% to over 8,500%. In one case, a backend data collection service that
+            ran for 6 hours before exhausting all system resources was refactored to complete in 6 minutes using only
+            40MB of memory. In another, I tuned databases to perform 99.5% of all queries in 1 millisecond that
+            previously took up to 10 seconds. In a third case, I took over leadership of a 3D interactive web
+            application project using Cesium, JavaScript, and TypeScript. We had a year to deliver performance
+            improvements, but we completed them nine months early—just three months after I joined the team.</p>
 
         <p>I am proud of my history and accomplishments. I believe I can fit into any organization in many roles due to
             my passion for software engineering and learning. I value creativity, collaboration, and continuous
