removing language specifics from coverletter

--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -17,10 +17,10 @@
             improving communication, delivering reliable estimates, and mentoring developers. I refactor
             relentlessly and enjoy cleaning up technical debt.</p>
 
-        <p>I am a Certified C++ Programmer and a Certified Kubernetes Application Developer (CKAD), with experience in
-            cloud computing. My expertise includes architecting, building, and deploying cloud-native applications,
-            leveraging technologies like Kubernetes to ensure scalability and reliability. These skills complement my
-            hands-on experience and demonstrate my ability to adapt to evolving industry standards.</p>
+        <p>I hold multiple professional certifications and have experience architecting, building, and deploying
+            cloud-native applications. I leverage modern technologies to ensure scalability and reliability, and these
+            skills complement my hands-on experience and demonstrate my ability to adapt to evolving industry standards.
+        </p>
 
         <p>I aggressively acquire new skills and am constantly learning. Fresh out of high school in 1989, I studied and
             passed the Series 6 and 63 licenses to sell securities to investors within two months. In 2000, I earned my
