Making it more OPSEC friendly

--- a/_includes/resume/certifications.html
+++ b/_includes/resume/certifications.html
@@ -9,8 +9,8 @@
         <ul class="two-column-list">
             <li>
                 <div class="flexdiv">
-                    <span class="left">Active Top Secret Security Clearance with SCI</span>
-                    <span class="right">July, 2024</span>
+                    <span class="left">U.S. Government Top Secret Security Clearance</span>
+                    <span class="right">(details upon request)</span>
                 </div>
             </li>
             <li>
