--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -5,7 +5,7 @@
 
         <p>My name is Tom DeMay. I am a Principal Software Engineer and Manager with Altamira Technologies Corporation,
             working in the national security space in support of the Department of Defense (DoD) and the Intelligence
-            Community (IC). I hold a Top Secret security clearance with SCI. I would like to tell you a little bit about
+            Community (IC). I hold a U.S. government Top Secret clearance. I would like to tell you a little bit about
             myself and why I feel I would be a great addition to your company.</p>
 
         <p>I have over 30 years of experience as a self-taught Software Engineer. I have served as an individual
