--- a/_includes/resume/employmenthistory/altamira.html
+++ b/_includes/resume/employmenthistory/altamira.html
@@ -12,8 +12,8 @@
 
     <p>Altamira provides engineering and analytic services to the defense, intelligence, and homeland security
         communities. As a member of the leadership team, I oversee teams to support the Department of Defense (DoD) and
-        the Intelligence Community (IC). My role requires an active Top Secret security clearance, underscoring my
-        commitment to advancing national security.</p>
+        the Intelligence Community (IC). My role requires a U.S. government Top Secret security clearance, underscoring
+        my commitment to advancing national security.</p>
 
     <ul class="projects-list">
         <li>Led the development of applications and services supporting the Department of Defense (DoD) and Intelligence
