removing 'top secret'

--- a/_includes/aboutme/professionalexperience.html
+++ b/_includes/aboutme/professionalexperience.html
@@ -53,7 +53,7 @@
         actively honing my skills in Typescript, Java Spring, GoLang and Rust. I completed a post graduate program in
         Cloud Computing from the University of Texas, earning a 4.3 GPA. I am also in the process of obtaining several
         Amazon AWS and Microsoft Azure certifications, with future plans to delve into machine learning and AI.
-        Additionally, I hold an U.S. government Top Secret security clearance, underscoring my commitment to protecting our
+        Additionally, I hold an U.S. government security clearance, underscoring my commitment to protecting our
         nation.
     </p>
 </details>
