--- a/_includes/resume/certifications.html
+++ b/_includes/resume/certifications.html
@@ -9,7 +9,7 @@
         <ul class="two-column-list">
             <li>
                 <div class="flexdiv">
-                    <span class="left">U.S. Government Top Secret Security Clearance</span>
+                    <span class="left">U.S. Government Security Clearance</span>
                     <span class="right">(details upon request)</span>
                 </div>
             </li>
