--- a/_includes/resume/employmenthistory/altamira.html
+++ b/_includes/resume/employmenthistory/altamira.html
@@ -12,7 +12,7 @@
 
     <p>Altamira provides engineering and analytic services to the defense, intelligence, and homeland security
         communities. As a member of the leadership team, I oversee teams to support the Department of Defense (DoD) and
-        the Intelligence Community (IC). My role requires a U.S. government Top Secret security clearance, underscoring
+        the Intelligence Community (IC). My role requires a U.S. government security clearance, underscoring
         my commitment to advancing national security.</p>
 
     <ul class="projects-list">
