--- a/_includes/resume/professionalskills.html
+++ b/_includes/resume/professionalskills.html
@@ -9,7 +9,7 @@
         <li class="skill">
             <strong class="skill-type large proficient">Security:</strong>
             <ul class="skill-items">
-                <li class="diamond">U.S. Government Top Secret Security Clearance</li>
+                <li class="diamond">U.S. Government Security Clearance</li>
                 <li>Digital Rights Management (DRM/ADRMS)</li>
             </ul>
         </li>
