--- a/_includes/aboutme/headline.html
+++ b/_includes/aboutme/headline.html
@@ -1,7 +1,7 @@
 <div id="aboutme" class="shadowbox">
     <h1>About Me</h1>
     <p> Allow me to introduce myself. My name is Tom DeMay, a Software Engineer Technical Lead and Engineering Manager
-        at Altamira Technologies Corp, where I hold a U.S. government Top Secret clearance. I am dedicated to advancing
+        at Altamira Technologies Corp, where I hold a U.S. government security clearance. I am dedicated to advancing
         critical national security missions and protecting our nation. I would like to share my background and explain
         why I believe I would be a valuable addition to any organization. </p>
 </div>
