cover letter changes, removing unnecessary details

--- a/_includes/resume/coverletter.html
+++ b/_includes/resume/coverletter.html
@@ -39,16 +39,10 @@
 
         <p>I have a reputation for high standards, writing well-designed maintainable code, and work well with
             others. I received numerous awards for bailing out a number of failing projects, leading performance
-            improvements ranging from roughly 3,900% to over 8,500%. In one case, a backend data collection service that
-            ran for 6 hours before exhausting all system resources was refactored to complete in 6 minutes using only
-            40MB of memory. In another, I tuned databases to perform 99.5% of all queries in 1 millisecond that
-            previously took up to 10 seconds. In a third case, I took over leadership of a 3D interactive web
-            application project using Cesium, JavaScript, and TypeScript. We had a year to deliver performance
-            improvements, but we completed them nine months early—just three months after I joined the team.</p>
-
-        <p>I am proud of my history and accomplishments. I believe I can fit into any organization in many roles due to
-            my passion for software engineering and learning. I value creativity, collaboration, and continuous
-            growth—qualities I believe would benefit your organization greatly.</p>
+            improvements ranging from roughly 3,900% to over 8,500%. I am proud of my history and accomplishments. I
+            believe I can fit into any organization in many roles due to my passion for software engineering and
+            learning. I value creativity, collaboration, and continuous growth—qualities I believe would benefit your
+            organization greatly.</p>
 
         <p>Thank you for your time and consideration.</p>
         <br />
